--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "src",
+  "name": "resume",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "markdown-it": "^14.1.0",
-    "npm": "^11.4.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
