--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "markdown-it": "^14.1.0",
     "react": "^19.1.0",
+    "vite": "^7.0.5",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
