--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: 'markCV - Beautiful online resume'
-publicPath: '/'
-resumePath: './markdown/resume-template.md'
+title: 'make-cv - 漂亮的在线个人简历'
+publicPath: '/public/'
+resumePath: './markdown/resume.md'
 showHeader: true
 headerInfo:
-  photo: './src/assets/avatar.jpeg'
-  name: 'bigLiao'
-  phone: '151****1111'
-  email: 'bigliao@markcv.com'
+  photo: './src/assets/avatar.jpg'
+  name: '万合天宜'
+  phone: '188****8888'
+  email: 'pgwan@makecv.com'
