--- a/config/config.yml
+++ b/config/config.yml
@@ -1,8 +1,8 @@
 title: 'make-cv - 漂亮的在线个人简历'
-resumePath: '/markdown/resume.md'
+resumePath: '/config/resume.md'
 showHeader: true
 headerInfo:
-  photo: '/src/assets/avatar.jpg'
+  photo: 'https://fileswan.x.ddnsto.com/imgs/IMG_2948.JPG'
   name: '万合天宜'
   phone: '188****8888'
   email: 'pgwan@makecv.com'
