--- a/config/config.yml
+++ b/config/config.yml
@@ -7,6 +7,6 @@ showHeader: true
 showPrintStick: true
 headerInfo:
   photo: 'https://fileswan.x.ddnsto.com/imgs/IMG_2948.JPG'
-  name: '万合天宜'
+  name: '张三(AI生成)'
   phone: '188****8888'
-  email: 'pgwan@makecv.com'
+  email: 'zhangsan@makecv.com'
