--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "resume",
-  "version": "1.0.8",
+  "name": "make-cv",
+  "version": "1.1.0",
   "private": true,
   "type": "module",
   "scripts": {
